<resources>
    <string name="app_name">ScoreBuddy</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hole_header">Hole %1$d of %2$d</string>
    <string name="add_score_button">Add Hole %1$d Score</string>
    <string name="player_a_default_name">Player A</string>
    <string name="player_b_default_name">Player B</string>
    <string name="player_c_default_name">Player C</string>
    <string name="player_d_default_name">Player D</string>
    <string name="score_table_hole_header">Hole</string>
    <string name="default_score">0</string>
    <string name="edit_icon_alt_text">Edit Icon</string>
    <string name="update_name_dialog_title">Update %1$s\'s Name</string>
    <string name="add_score_dialog_title">Add Hole %1$d Score</string>
    <string name="add_score_dialog_player_name">%1$s\'s Score</string>
    <string name="reset_button">Reset</string>
    <string name="doneButton">Done!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="app_title">ScoreBuddy</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_friend_page">FriendPage</string>
    <string name="title_activity_profile_page">ProfilePage</string>
</resources>